// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms|LinkButton default 1`] = `
<LinkButton
  href="#"
>
  <LocalizedLink
    className="button"
    href="#"
  >
    <Link
      href="#"
    >
      <a
        className="button"
        href="#"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        LinkButton w/Link
      </a>
    </Link>
  </LocalizedLink>
</LinkButton>
`;

exports[`Storyshots Atoms|LinkButton filled 1`] = `
<LinkButton
  filled={true}
  href="#"
>
  <LocalizedLink
    className="button filled"
    href="#"
  >
    <Link
      href="#"
    >
      <a
        className="button filled"
        href="#"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Filled LinkButton
      </a>
    </Link>
  </LocalizedLink>
</LinkButton>
`;

exports[`Storyshots Atoms|LinkButton regular case 1`] = `
<LinkButton
  href="#"
  normalCase={true}
>
  <LocalizedLink
    className="button normal-case"
    href="#"
  >
    <Link
      href="#"
    >
      <a
        className="button normal-case"
        href="#"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        LinkButton (Normal Case)
      </a>
    </Link>
  </LocalizedLink>
</LinkButton>
`;

exports[`Storyshots Atoms|LinkButton small 1`] = `
<LinkButton
  href="#"
  small={true}
>
  <LocalizedLink
    className="button small"
    href="#"
  >
    <Link
      href="#"
    >
      <a
        className="button small"
        href="#"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Small LinkButton
      </a>
    </Link>
  </LocalizedLink>
</LinkButton>
`;

exports[`Storyshots Atoms|LinkButton small and filled 1`] = `
<LinkButton
  filled={true}
  href="#"
  small={true}
>
  <LocalizedLink
    className="button filled small"
    href="#"
  >
    <Link
      href="#"
    >
      <a
        className="button filled small"
        href="#"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Small and Filled LinkButton
      </a>
    </Link>
  </LocalizedLink>
</LinkButton>
`;
